--- a/src/css/base/form.scss
+++ b/src/css/base/form.scss
@@ -14,7 +14,7 @@ label {
 
 input[type="email"] {
   font-size: 1rem;
-  padding: .7rem 0.7em;
+  padding: 0.7rem 0.7rem;
 }
 
 form button[type="submit"], 
