--- a/src/css/base/typography.scss
+++ b/src/css/base/typography.scss
@@ -8,7 +8,7 @@ h1, h2, h3, h4, h5, h6 {
     margin-top: 0.5rem;
   }
 
-  & + .push {
+  & + .text_block {
     margin-top: 1.5rem;
   }
 }
